# SO1_2S2024_202010023

./: README.md
HT-01/: agronomy-faculty-deployment.yaml
PY-01/: docker-compose.yml
PY-01/docs/: README.md
PY-01/kernel-module/: exporter.c  sysinfo.c
PY-01/rust-service/: Cargo.toml
PY-01/scripts/: create_containers.sh
PY-02/: go.work  go.work.sum
PY-02/deployments/: agronomy-faculty-deployment.yaml  athletics-competition-deployment.yaml  boxing-competition-deployment.yaml  disciplines-deployment.yaml  engineering-faculty-deployment.yaml  losers-deployment.yaml  redis-deployment.yaml  swimming-competition-deployment.yaml  winners-deployment.yaml
PY-02/docs/: README.md
PY-02/grafana/: olympics.json  prometheus.json
PY-02/hpa/: agronomy-faculty-hpa.yaml  engineering-faculty-hpa.yaml
PY-02/ingresses/: faculties-ingress.yaml
PY-02/kafka/: kafka-cluster.yaml  kafka-losers-topic.yaml  kafka-topic.yaml  kafka-winners-topic.yaml
PY-02/locust/: main.py  requirements.txt
PY-02/proto/: discipline.proto  go.mod
PY-02/scripts/: deploy-faculties.sh  deploy-gke.sh  deploy-local.sh  get-faculties.sh  get-resources.sh
PY-02/services/: agronomy-faculty-service.yaml  athletics-competition-service.yaml  boxing-competition-service.yaml  disciplines-service.yaml  engineering-faculty-service.yaml  swimming-competition-service.yaml
PY-02/src/engineering/: Cargo.toml  Dockerfile  build.rs
PY-02/src/engineering/src/: main.rs
Tarea-01/: main.c
Tarea-02/: script.sh
Tarea-04/: deployment.yaml  ingress.yaml  service.yaml
scripts/: create_containers.sh
(+28 files in other folders)
