[package]
name = "engineering"
version = "0.1.0"
authors = ["Luis Lizama"]
edition = "2021"

[[bin]]
name = "engineering"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
axum-server = "0.7.1"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.3"
